fix : home api call, project api call catch, card heart z-index

--- a/styles/components/projectCard.scss
+++ b/styles/components/projectCard.scss
@@ -76,7 +76,7 @@
   .project-save {
     word-break: normal;
     position: relative;
-    z-index: 5;
+    z-index: 7;
   }
   svg {
     margin-right: .7rem;
